Update SimLib.java
double constructor deprecated